RbA Build/src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Amount_Financed__c</fullName>
        <inlineHelpText>Roll up of the Amount Financed</inlineHelpText>
        <label>Amount Financed</label>
        <summarizedField>Quote_Financing__c.Amount_Financed__c</summarizedField>
        <summaryForeignKey>Quote_Financing__c.Related_Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Calculated_Sub_Total__c</fullName>
        <label>Calculated Sub Total</label>
        <summarizedField>QuoteLineItem.Calculated_Price__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cloned_Quote_Id__c</fullName>
        <description>The id of the quote from which this quote was cloned. This is a system field used within the cancelOrder process within the RMS_mobileAppRequestHelper.</description>
        <label>Cloned Quote Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>The date the quote was presented to the customer</description>
        <inlineHelpText>The date the quote was presented to the customer</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <description>The rollup of discounts applied to the quote</description>
        <inlineHelpText>The rollup of discounts applied to the quote</inlineHelpText>
        <label>Discount Amount</label>
        <summarizedField>Quote_Discount__c.Discount_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Quote_Discount__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Discount__c.Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Discount applied to the entire quote.</description>
        <inlineHelpText>Discount applied to the entire quote.</inlineHelpText>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pivotal_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External Id field used for data import</description>
        <externalId>true</externalId>
        <label>Pivotal Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if it is the primary/sold quote.</description>
        <inlineHelpText>Checked if it is the primary/sold quote.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Total__c</fullName>
        <label>Sub Total</label>
        <summarizedField>QuoteLineItem.Roll_Up_Subtotal__c</summarizedField>
        <summaryFilterItems>
            <field>QuoteLineItem.isInactive__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>The total of the quote (total product price - discounts)</description>
        <formula>Sub_Total__c - Discount_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The total of the quote (total product price - discounts)</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>isSold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if it is the primary/sold quote.</description>
        <inlineHelpText>Checked if it is the primary/sold quote.</inlineHelpText>
        <label>Is Sold?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rSuite_Id__c</fullName>
        <description>an identifier used by rSuite to help them manage jobs in the mobile apps - meets RFC 4122 version 4</description>
        <externalId>true</externalId>
        <inlineHelpText>an identifier used by rSuite to help them manage jobs in the mobile apps</inlineHelpText>
        <label>rSuite Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <recordTypes>
        <fullName>Quote_Record_Type</fullName>
        <active>true</active>
        <label>Quote Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DiscountAmtCannotGreaterSubtotal</fullName>
        <active>true</active>
        <description>Discount Amount cannot be greater than Subtotal</description>
        <errorConditionFormula>Discount_Amount__c  &gt;  Sub_Total__c</errorConditionFormula>
        <errorMessage>Discount Amount cannot be greater than Subtotal.  Please make correct adjustments.</errorMessage>
    </validationRules>
</CustomObject>